2014-04-08         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.1: Release tar ball made.

2014-03-17         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (clean-local): Clean up .dSYM directories for Mac OS X.
	Thanks to Hermann Piefer for the suggestion.

2013-05-09         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.0: Release tar ball made.

2013-02-03         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (AWKPROG): Add definition and conditional for
	cross compiling. Thanks to Juergen Kahrs.

2013-01-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* eg/lib/inplace.awk: Add new file generated from doc/gawk.texi.

2012-12-24         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.0.2: Release tar ball made.

2012-03-28         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.0.1: Release tar ball made.

2011-06-24         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): Add ChangeLog.0.
	* 4.0.0: Remake the tar ball.

2011-06-23         Arnold D. Robbins     <arnold@skeeve.com>

	* ChangeLog.0: Rotated ChangeLog into this file.
	* ChangeLog: Created anew for gawk 4.0.0 and on.
	* 4.0.0: Release tar ball made.