@@ -1,3 +1,8 @@
+2014-10-17         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* Makefile.am (profile1, testext): Use explicit ./foo.awk to avoid
+	assumptions about AWKPATH in the environment.
+
 2014-10-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (charset-msg-start): Add a list of needed locales.
