@@ -1,3 +1,8 @@
+2014-10-17         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* Makefile.am (stamp-eg): Use explicit ./extract.awk to avoid
+	assumptions about AWKPATH in the environment.
+
 2014-04-08         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 4.1.1: Release tar ball made.
